[metadata]
name = wheelie
author = Nick Stielau
author-email = nick.stielau@gmail.com
summary = Let your python do wheelies
license = MIT
description-file = README.md
home-page = https://github.com/nstielau/wheelie
requires-python = 2.7

[pbr]
skip_authors = True
skip_changelog = True
warnerrors = True

[wheel]
universal = 0
